--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
   <string name="app_name">MaxutkaLove</string>
     <string name="delete">Delete</string>
   <string name="edit">Edit</string>
+    <string name="undo">Undo</string>
 </resources>
